--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
         
         <div class="about-content">
             <div class="about-img animate-3d">
-                <img src="photo.jpeg" alt="Ritesh Rathod" class="profile-img">
+                <img src="photo.jpg" alt="Ritesh Rathod" class="profile-img">
             </div>
             <div class="about-text animate-3d from-right">
                 <h3>Second Year Student At St. Vincent Pallotti College Of Engineering And Technology</h3>
